add tca image example

--- a/public/typo3conf/ext/news/Resources/Private/Language/locallang_be.xlf
+++ b/public/typo3conf/ext/news/Resources/Private/Language/locallang_be.xlf
@@ -18,10 +18,13 @@
         <source>News</source>
       </trans-unit>
       <trans-unit id="tx_typo3demo_news_domain_model_item.title" xml:space="preserve">
-        <source>Titel</source>
+        <source>Title</source>
       </trans-unit>
       <trans-unit id="tx_typo3demo_news_domain_model_item.text" xml:space="preserve">
         <source>Text</source>
+      </trans-unit>
+      <trans-unit id="tx_typo3demo_news_domain_model_item.image" xml:space="preserve">
+        <source>Image</source>
       </trans-unit>
     </body>
   </file>
