--- a/public/typo3conf/ext/news/Resources/Private/Language/locallang_be.xlf
+++ b/public/typo3conf/ext/news/Resources/Private/Language/locallang_be.xlf
@@ -26,6 +26,18 @@
       <trans-unit id="tx_typo3demo_news_domain_model_item.inverted" xml:space="preserve">
         <source>Inverted</source>
       </trans-unit>
+      <trans-unit id="tx_typo3demo_news_domain_model_item.size" xml:space="preserve">
+        <source>Size</source>
+      </trans-unit>
+      <trans-unit id="tx_typo3demo_news_domain_model_item.size.small" xml:space="preserve">
+        <source>Small</source>
+      </trans-unit>
+      <trans-unit id="tx_typo3demo_news_domain_model_item.size.medium" xml:space="preserve">
+        <source>Medium</source>
+      </trans-unit>
+      <trans-unit id="tx_typo3demo_news_domain_model_item.size.large" xml:space="preserve">
+        <source>Large</source>
+      </trans-unit>
       <trans-unit id="tx_typo3demo_news_domain_model_item.image" xml:space="preserve">
         <source>Image</source>
       </trans-unit>
