--- a/public/typo3conf/ext/news/Resources/Private/Language/locallang.xlf
+++ b/public/typo3conf/ext/news/Resources/Private/Language/locallang.xlf
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff version="1.0">
-  <file>
+  <file source-language="en" datatype="plaintext">
+    <header/>
     <body>
       <trans-unit id="foo" xml:space="preserve">
         <source>bar</source>
