fix: news tca localization

--- a/public/typo3conf/ext/news/Resources/Private/Language/de.locallang_be.xlf
+++ b/public/typo3conf/ext/news/Resources/Private/Language/de.locallang_be.xlf
@@ -52,8 +52,8 @@
         <target>Large</target>
       </trans-unit>
       <trans-unit id="tx_typo3demo_news_domain_model_item.color" xml:space="preserve">
-        <source>Size</source>
-        <target>Größe</target>
+        <source>Color</source>
+        <target>Farbe</target>
       </trans-unit>
       <trans-unit id="tx_typo3demo_news_domain_model_item.color.red" xml:space="preserve">
         <source>Red</source>
